# QDTS_SC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_SC.md
HelpSource/Classes/: QDTS.schelp  QDTSSolver.schelp
HelpSource/Guides/: QDTS_Guide.schelp
QDTS_SC/: QDTSSolver.sc
QDTS_SC/HelpSource/Classes/: QDTSSolver.schelp
QDTS_SC/HelpSource/Guides/: QDTS_Guide.schelp
QDTS_SC/examples/: QDTS_examples.scd
examples/: QDTS_examples.scd
plugins/Solver/: Solver.cpp
sc-classes/: QDTSSolver.scx  Solver.sc
sift-flow/: requirements.txt  sift_flow_morph.py
verification/: QDTS_verification.scd  qdts_solver.py  test_vectors.json
